# tacacs

./: README.md
audisp-tacplus/: AUTHORS  ChangeLog  Example-audit-rules-exece-auid  Makefile.am  Makefile.in  NEWS  README  audisp-tac_plus.conf  audisp-tacplus.c  audisp-tacplus.conf  audisp_tacplus.spec  config.h.in  configure  configure.ac
libnss-tacplus/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  auto.sh  config.h.in  configure  configure.ac  nss_tacplus.c  nss_tacplus.h  tacplus_nss.conf
libpam_tacplus/: ChangeLog  Makefile.am  Pam.d.common-example  README.md  configure.ac  map_tacplus_user.c  map_tacplus_user.h  pam_tacplus.c  sample.pam  support.c  support.h  tacplus_servers
libpam_tacplus/debian/: changelog  control  copyright  libpam-tacplus-dev.install  libpam-tacplus.install  libtac-dev.install  libtac2.install  libtac2.symbols  libtacplus-map-dev.install  libtacplus-map1.install  libtacplus-map1.symbols
libpam_tacplus/libtac/include/: libtac.h
libpam_tacplus/libtac/lib/: acct_r.c  acct_s.c  attrib.c  authen_r.c  authen_s.c  author_r.c  author_s.c  cont_s.c  crypt.c  header.c  magic.c  magic.h  xalloc.c  xalloc.h
simple_tacacct/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acct_test.c  config.h.in~  configure  configure.ac  simple_tacacct.c
